_generated-doc/1.11/config/quarkus-spring-cloud-config-client.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-spring-cloud-config-client_configuration]]link:#quarkus-spring-cloud-config-client_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.enabled]]`link:#quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.enabled[quarkus.spring-cloud-config.enabled]`

[.description]
--
If enabled, will try to read the configuration from a Spring Cloud Config Server
--|boolean 
|`false`


a| [[quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.fail-fast]]`link:#quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.fail-fast[quarkus.spring-cloud-config.fail-fast]`

[.description]
--
If set to true, the application will not stand up if it cannot obtain configuration from the Config Server
--|boolean 
|`false`


a| [[quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.url]]`link:#quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.url[quarkus.spring-cloud-config.url]`

[.description]
--
The Base URI where the Spring Cloud Config Server is available
--|string 
|`http://localhost:8888`


a| [[quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.label]]`link:#quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.label[quarkus.spring-cloud-config.label]`

[.description]
--
The label to be used to pull remote configuration properties. The default is set on the Spring Cloud Config Server (generally "main" or "master" when the server uses a Git backend).
--|string 
|


a| [[quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.connection-timeout]]`link:#quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.connection-timeout[quarkus.spring-cloud-config.connection-timeout]`

[.description]
--
The amount of time to wait when initially establishing a connection before giving up and timing out. 
 Specify `0` to wait indefinitely.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.read-timeout]]`link:#quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.read-timeout[quarkus.spring-cloud-config.read-timeout]`

[.description]
--
The amount of time to wait for a read on a socket before an exception is thrown. 
 Specify `0` to wait indefinitely.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`60S`


a| [[quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.username]]`link:#quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.username[quarkus.spring-cloud-config.username]`

[.description]
--
The username to be used if the Config Server has BASIC Auth enabled
--|string 
|


a| [[quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.password]]`link:#quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.password[quarkus.spring-cloud-config.password]`

[.description]
--
The password to be used if the Config Server has BASIC Auth enabled
--|string 
|


a| [[quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.trust-store]]`link:#quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.trust-store[quarkus.spring-cloud-config.trust-store]`

[.description]
--
TrustStore to be used containing the SSL certificate used by the Config server Can be either a classpath resource or a file system path
--|path 
|


a| [[quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.trust-store-password]]`link:#quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.trust-store-password[quarkus.spring-cloud-config.trust-store-password]`

[.description]
--
Password of TrustStore to be used containing the SSL certificate used by the Config server
--|string 
|


a| [[quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.key-store]]`link:#quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.key-store[quarkus.spring-cloud-config.key-store]`

[.description]
--
KeyStore to be used containing the SSL certificate for authentication with the Config server Can be either a classpath resource or a file system path
--|path 
|


a| [[quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.key-store-password]]`link:#quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.key-store-password[quarkus.spring-cloud-config.key-store-password]`

[.description]
--
Password of KeyStore to be used containing the SSL certificate for authentication with the Config server
--|string 
|


a| [[quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.key-password]]`link:#quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.key-password[quarkus.spring-cloud-config.key-password]`

[.description]
--
Password to recover key from KeyStore for SSL client authentication with the Config server If no value is provided, the key-store-password will be used
--|string 
|


a| [[quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.trust-certs]]`link:#quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.trust-certs[quarkus.spring-cloud-config.trust-certs]`

[.description]
--
When using HTTPS and no keyStore has been specified, whether or not to trust all certificates
--|boolean 
|`false`


a| [[quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.headers-headers]]`link:#quarkus-spring-cloud-config-client_quarkus.spring-cloud-config.headers-headers[quarkus.spring-cloud-config.headers]`

[.description]
--
Custom headers to pass the Spring Cloud Config Server when performing the HTTP request
--|`Map<String,String>` 
|

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
