_generated-doc/3.2/config/quarkus-spring-cloud-config-client.adoc

:summaryTableId: quarkus-spring-cloud-config-client
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-spring-cloud-config-client_configuration]]link:#quarkus-spring-cloud-config-client_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-enabled]]`link:#quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-enabled[quarkus.spring-cloud-config.enabled]`


[.description]
--
If enabled, will try to read the configuration from a Spring Cloud Config Server

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SPRING_CLOUD_CONFIG_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SPRING_CLOUD_CONFIG_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-fail-fast]]`link:#quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-fail-fast[quarkus.spring-cloud-config.fail-fast]`


[.description]
--
If set to true, the application will not stand up if it cannot obtain configuration from the Config Server

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SPRING_CLOUD_CONFIG_FAIL_FAST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SPRING_CLOUD_CONFIG_FAIL_FAST+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-url]]`link:#quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-url[quarkus.spring-cloud-config.url]`


[.description]
--
The Base URI where the Spring Cloud Config Server is available

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SPRING_CLOUD_CONFIG_URL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SPRING_CLOUD_CONFIG_URL+++`
endif::add-copy-button-to-env-var[]
--|string 
|`http://localhost:8888`


a| [[quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-label]]`link:#quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-label[quarkus.spring-cloud-config.label]`


[.description]
--
The label to be used to pull remote configuration properties. The default is set on the Spring Cloud Config Server (generally "master" when the server uses a Git backend).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SPRING_CLOUD_CONFIG_LABEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SPRING_CLOUD_CONFIG_LABEL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-connection-timeout]]`link:#quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-connection-timeout[quarkus.spring-cloud-config.connection-timeout]`


[.description]
--
The amount of time to wait when initially establishing a connection before giving up and timing out.

Specify `0` to wait indefinitely.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SPRING_CLOUD_CONFIG_CONNECTION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SPRING_CLOUD_CONFIG_CONNECTION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|`10S`


a| [[quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-read-timeout]]`link:#quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-read-timeout[quarkus.spring-cloud-config.read-timeout]`


[.description]
--
The amount of time to wait for a read on a socket before an exception is thrown.

Specify `0` to wait indefinitely.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SPRING_CLOUD_CONFIG_READ_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SPRING_CLOUD_CONFIG_READ_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|`60S`


a| [[quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-username]]`link:#quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-username[quarkus.spring-cloud-config.username]`


[.description]
--
The username to be used if the Config Server has BASIC Auth enabled

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SPRING_CLOUD_CONFIG_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SPRING_CLOUD_CONFIG_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-password]]`link:#quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-password[quarkus.spring-cloud-config.password]`


[.description]
--
The password to be used if the Config Server has BASIC Auth enabled

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SPRING_CLOUD_CONFIG_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SPRING_CLOUD_CONFIG_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-trust-store]]`link:#quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-trust-store[quarkus.spring-cloud-config.trust-store]`


[.description]
--
TrustStore to be used containing the SSL certificate used by the Config server Can be either a classpath resource or a file system path

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SPRING_CLOUD_CONFIG_TRUST_STORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SPRING_CLOUD_CONFIG_TRUST_STORE+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-trust-store-password]]`link:#quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-trust-store-password[quarkus.spring-cloud-config.trust-store-password]`


[.description]
--
Password of TrustStore to be used containing the SSL certificate used by the Config server

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SPRING_CLOUD_CONFIG_TRUST_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SPRING_CLOUD_CONFIG_TRUST_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-key-store]]`link:#quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-key-store[quarkus.spring-cloud-config.key-store]`


[.description]
--
KeyStore to be used containing the SSL certificate for authentication with the Config server Can be either a classpath resource or a file system path

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SPRING_CLOUD_CONFIG_KEY_STORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SPRING_CLOUD_CONFIG_KEY_STORE+++`
endif::add-copy-button-to-env-var[]
--|path 
|


a| [[quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-key-store-password]]`link:#quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-key-store-password[quarkus.spring-cloud-config.key-store-password]`


[.description]
--
Password of KeyStore to be used containing the SSL certificate for authentication with the Config server

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SPRING_CLOUD_CONFIG_KEY_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SPRING_CLOUD_CONFIG_KEY_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-key-password]]`link:#quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-key-password[quarkus.spring-cloud-config.key-password]`


[.description]
--
Password to recover key from KeyStore for SSL client authentication with the Config server If no value is provided, the key-store-password will be used

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SPRING_CLOUD_CONFIG_KEY_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SPRING_CLOUD_CONFIG_KEY_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-trust-certs]]`link:#quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-trust-certs[quarkus.spring-cloud-config.trust-certs]`


[.description]
--
When using HTTPS and no keyStore has been specified, whether to trust all certificates

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SPRING_CLOUD_CONFIG_TRUST_CERTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SPRING_CLOUD_CONFIG_TRUST_CERTS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`${quarkus.tls.trust-all:false}`


a| [[quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-profiles]]`link:#quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-profiles[quarkus.spring-cloud-config.profiles]`


[.description]
--
The profiles to use for lookup

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SPRING_CLOUD_CONFIG_PROFILES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SPRING_CLOUD_CONFIG_PROFILES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-headers-headers]]`link:#quarkus-spring-cloud-config-client_quarkus-spring-cloud-config-headers-headers[quarkus.spring-cloud-config.headers]`


[.description]
--
Custom headers to pass the Spring Cloud Config Server when performing the HTTP request

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SPRING_CLOUD_CONFIG_HEADERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SPRING_CLOUD_CONFIG_HEADERS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() javadoc] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
